crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_useless_stroke_and_fill__remove_useless_stroke_and_fill-2.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_useless_stroke_and_fill.rs
expression: "test_config(r#\"{ \"removeUselessStrokeAndFill\": {} }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- remove useless fills -->\n    <defs>\n        <g id=\"test\">\n            <rect fill-opacity=\".5\" width=\"100\" height=\"100\"/>\n        </g>\n    </defs>\n    <circle fill=\"none\" fill-rule=\"evenodd\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <circle fill=\"red\" fill-opacity=\"0\" cx=\"90\" cy=\"90\" r=\"50\"/>\n    <circle fill-opacity=\"0\" fill-rule=\"evenodd\" cx=\"90\" cy=\"60\" r=\"50\"/>\n    <circle fill=\"red\" fill-opacity=\".5\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <g fill=\"none\">\n        <circle fill-opacity=\".5\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- remove useless fills -->
    <defs>
        <g id="test">
            <rect fill-opacity=".5" width="100" height="100"></rect>
        </g>
    </defs>
    <circle fill="none" cx="60" cy="60" r="50"></circle>
    <circle fill="none" cx="90" cy="90" r="50"></circle>
    <circle cx="90" cy="60" r="50" fill="none"></circle>
    <circle fill="red" fill-opacity=".5" cx="60" cy="60" r="50"></circle>
    <g fill="none">
        <circle cx="60" cy="60" r="50"></circle>
    </g>
</svg>
