crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_useless_stroke_and_fill__remove_useless_stroke_and_fill-3.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_useless_stroke_and_fill.rs
expression: "test_config(r#\"{ \"removeUselessStrokeAndFill\": {} }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- ignore documents with `style` -->\n    <style>\n        * {}\n    </style>\n    <circle fill=\"none\" fill-rule=\"evenodd\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <circle fill-opacity=\"0\" fill-rule=\"evenodd\" cx=\"90\" cy=\"60\" r=\"50\"/>\n    <circle fill=\"red\" stroke-width=\"6\" stroke-dashoffset=\"5\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <circle fill=\"red\" stroke=\"#000\" stroke-width=\"6\" stroke-dashoffset=\"5\" stroke-opacity=\"0\" cx=\"60\" cy=\"60\" r=\"50\"/>\n</svg>\"##),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- ignore documents with `style` -->
    <style>
        *{}
    </style>
    <circle fill="none" fill-rule="evenodd" cx="60" cy="60" r="50"/>
    <circle fill-opacity="0" fill-rule="evenodd" cx="90" cy="60" r="50"/>
    <circle fill="red" stroke-width="6" stroke-dashoffset="5" cx="60" cy="60" r="50"/>
    <circle fill="red" stroke="#000" stroke-width="6" stroke-dashoffset="5" stroke-opacity="0" cx="60" cy="60" r="50"/>
</svg>
