crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_useless_stroke_and_fill__remove_useless_stroke_and_fill-4.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_useless_stroke_and_fill.rs
expression: "test_config(r#\"{ \"removeUselessStrokeAndFill\": {} }\"#,\nSome(r#\"<svg width=\"480\" height=\"360\" xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- don't remove stroke when useful stroke-width and marker-end is on element -->\n    <defs>\n        <marker id=\"testMarker\">\n            <rect width=\"100\" height=\"100\" fill=\"blue\" />\n        </marker>\n    </defs>\n    <line x1=\"150\" y1=\"150\" x2=\"165\" y2=\"150\" stroke=\"red\" stroke-width=\"25\" marker-end=\"url(#testMarker)\" />\n    <line x1=\"250\" y1=\"250\" x2=\"265\" y2=\"250\" stroke=\"red\" stroke-width=\"0\" marker-end=\"url(#testMarker)\" />\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg" width="480" height="360">
    <!-- don't remove stroke when useful stroke-width and marker-end is on element -->
    <defs>
        <marker id="testMarker">
            <rect width="100" height="100" fill="blue"></rect>
        </marker>
    </defs>
    <line x1="150" y1="150" x2="165" y2="150" stroke="red" stroke-width="25" marker-end="url(#testMarker)"></line>
    <line x1="250" y1="250" x2="265" y2="250" marker-end="url(#testMarker)"></line>
</svg>
