crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_useless_stroke_and_fill__remove_useless_stroke_and_fill-5.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_useless_stroke_and_fill.rs
expression: "test_config(r#\"{ \"removeUselessStrokeAndFill\": { \"removeNone\": true } }\"#,\nSome(r#\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- remove element with useless stroke/fill -->\n    <defs>\n        <g id=\"test\">\n            <rect fill-opacity=\".5\" width=\"100\" height=\"100\"/>\n        </g>\n    </defs>\n    <circle fill=\"none\" fill-rule=\"evenodd\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <circle fill=\"red\" fill-opacity=\"0\" cx=\"90\" cy=\"90\" r=\"50\"/>\n    <circle fill-opacity=\"0\" fill-rule=\"evenodd\" cx=\"90\" cy=\"60\" r=\"50\"/>\n    <circle fill=\"red\" fill-opacity=\".5\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <g fill=\"none\">\n        <circle fill-opacity=\".5\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    </g>\n</svg>\"#),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- remove element with useless stroke/fill -->
    <defs>
        <g id="test">
            <rect fill-opacity=".5" width="100" height="100"/>
        </g>
    </defs>
    <circle fill="red" fill-opacity=".5" cx="60" cy="60" r="50"/>
    <g fill="none"/>
</svg>
