crates/oxvg_optimiser/src/jobs/snapshots/oxvg_optimiser__jobs__remove_useless_stroke_and_fill__remove_useless_stroke_and_fill.snap
---
source: crates/oxvg_optimiser/src/jobs/remove_useless_stroke_and_fill.rs
expression: "test_config(r#\"{ \"removeUselessStrokeAndFill\": {} }\"#,\nSome(r##\"<svg xmlns=\"http://www.w3.org/2000/svg\">\n    <!-- don't affect elements within id'd element -->\n    <defs>\n        <g id=\"test\">\n            <rect stroke-dashoffset=\"5\" width=\"100\" height=\"100\"/>\n        </g>\n    </defs>\n    <!-- remove useless strokes/fills -->\n    <circle fill=\"red\" stroke-width=\"6\" stroke-dashoffset=\"5\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <circle fill=\"red\" stroke=\"#000\" stroke-width=\"6\" stroke-dashoffset=\"5\" stroke-opacity=\"0\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <circle fill=\"red\" stroke=\"#000\" stroke-width=\"0\" stroke-dashoffset=\"5\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <circle fill=\"red\" stroke=\"#000\" stroke-width=\"6\" stroke-dashoffset=\"5\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    <!-- replace useless strokes with \"none\" when inherited stroke will replace it -->\n    <g stroke=\"#000\" stroke-width=\"6\">\n        <circle fill=\"red\" stroke=\"red\" stroke-width=\"0\" stroke-dashoffset=\"5\" cx=\"60\" cy=\"60\" r=\"50\"/>\n        <circle fill=\"red\" stroke-dashoffset=\"5\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    </g>\n    <g stroke=\"#000\">\n        <circle fill=\"red\" stroke-width=\"0\" stroke-dashoffset=\"5\" cx=\"60\" cy=\"60\" r=\"50\"/>\n        <circle fill=\"red\" stroke=\"none\" stroke-dashoffset=\"5\" cx=\"60\" cy=\"60\" r=\"50\"/>\n    </g>\n</svg>\"##),)?"
---
<svg xmlns="http://www.w3.org/2000/svg">
    <!-- don't affect elements within id'd element -->
    <defs>
        <g id="test">
            <rect stroke-dashoffset="5" width="100" height="100"></rect>
        </g>
    </defs>
    <!-- remove useless strokes/fills -->
    <circle fill="red" cx="60" cy="60" r="50"></circle>
    <circle fill="red" cx="60" cy="60" r="50"></circle>
    <circle fill="red" cx="60" cy="60" r="50"></circle>
    <circle fill="red" stroke="#000" stroke-width="6" stroke-dashoffset="5" cx="60" cy="60" r="50"></circle>
    <!-- replace useless strokes with "none" when inherited stroke will replace it -->
    <g stroke="#000" stroke-width="6">
        <circle fill="red" cx="60" cy="60" r="50" stroke="none"></circle>
        <circle fill="red" stroke-dashoffset="5" cx="60" cy="60" r="50"></circle>
    </g>
    <g stroke="#000">
        <circle fill="red" cx="60" cy="60" r="50" stroke="none"></circle>
        <circle fill="red" cx="60" cy="60" r="50" stroke="none"></circle>
    </g>
</svg>
